fix: passport and protocol page spacing and text
PI-228 - Landing page : Spacing issue for passport tab on landing page for mobile device

PI-230 - Landing page : Text got cut off on "protocol" tab page for mobile view

PI-233 - Landing Page: SAFARI: On Safari Mac there is a text that is getting cut off on the Protocol page

--- a/styles/index.css
+++ b/styles/index.css
@@ -253,7 +253,6 @@ body > div {
 .tiles--perspective {
   overflow: visible;
   perspective: 1000px;
-  --tiles-height: 500px;
 }
 
 .tiles__wrap {
